--- a/src/main/resources/templates/weather_history/weatherList.html
+++ b/src/main/resources/templates/weather_history/weatherList.html
@@ -55,19 +55,19 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="history : $ {weatherHistoryList}">
-							<td th:text="${}"></td>
+						<tr th:each="history : ${weatherHistoryList}">
+							<td th:text="${#temporals.format(history.date, 'yyyy년 M월 d일')}"></td>
 							<td th:switch="${history.weather}">
-								<img th:case="'맑음'" th:src="/img/sunny.jpg" alt="맑음">
-								<img th:case="'비'" th:src="/img/rainy.jpg" alt="비">
-								<img th:case="'구름조금'" th:src="/img/verycloudy.jpg" alt="구름조금">
-								<img th:case="'흐림'" th:src="/img/cloudy.jpg" alt="흐림">
+								<img th:case="'맑음'" src="/img/sunny.jpg" alt="맑음">
+								<img th:case="'비'" src="/img/rainy.jpg" alt="비">
+								<img th:case="'구름조금'" src="/img/partlyCloudy.jpg" alt="구름조금">
+								<img th:case="'흐림'" src="/img/cloudy.jpg" alt="흐림">
 								<span th:case="*" th:text="${history.weather}"></span>
 							</td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
+							<td th:text="${history.temperatures} + '°C'"></td>
+							<td th:text="|${history.precipitation}mm|"></td>
+							<td th:text="${history.microDust}"></td>
+							<td th:text="|${history.windSpeed}km/h|"></td>
 						</tr>
 					</tbody>
 				</table>
