--- a/src/main/resources/templates/weather_history/addWeather.html
+++ b/src/main/resources/templates/weather_history/addWeather.html
@@ -20,7 +20,7 @@
 				</div>
 				
 				<!-- flex-column: 세로 메뉴 -->
-				<ul class="nav flex-column mt-4 info">
+				<ul class="nav flex-column mt-4">
 					<li class="nav-item">
 						<a href="/weather-history/weather-list-view" class="nav-link menu-font">날씨</a>
 					</li>
