--- a/src/main/resources/templates/lesson06/addBookMark.html
+++ b/src/main/resources/templates/lesson06/addBookMark.html
@@ -2,14 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>즐겨찾기 추가</title>
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </head>
 <body>
- <div class="container">
+	<div class="container">
 		<h1>즐겨찾기 추가</h1>
 		
 		<div class="form-group">
@@ -17,42 +17,78 @@
 			<input type="text" id="name" class="form-control">
 		</div>
 
-		<div class="form-group">
+		<div class="form-group d-flex">
 			<label for="url">URL 주소</label>
 			<input type="text" id="url" class="form-control col-11">
+			<button type="button" id="nameCheckBtn" class="btn btn-warning col-4">중복확인</button>
+			
 		</div>
 		
 		<button type="button" id="addBtn" class="btn btn-success btn-block">추가</button>
 	</div>
 	
 	<script>
-		$(document).ready(function(){
-			$("#joinBtn").on('click', function(){
-				let name = $("input[name=name]").val().trim();
-				if (name.length < 1){
-					alret("제목을 입력하세요");
+		$(document).ready(function() {
+			$("#addBtn").on('click', function(){
+				$("#addBtn").empty();
+				
+				let name = $("#name").val().trim();
+				if (!name){
+					$("#nameStatusArea").append('<span class="text-danger">이름이 비었습니다.</span>'); // 함수가 모르고 검색을 해봐야 할때  Ex)태그안에태그  동적으로 넣기등으로 검색해보아야함
+					return; //비어있을때 서버에 갈수 없기 때문에 return을 꼭 해준다.
+				} 
+			});
+			// 추가 버튼
+			$("#addBtn").on('click', function() {
+				//alert("버튼 클릭");
+				// validation
+				let name = $("#name").val().trim();
+				if (!name) {
+					alert("사이트명을 입력하세요");
 					return;
 				}
-				let url = $("input[url=url]").val().trim();
-				if (url == ""){
-					alret("주소를 입력하세요");
+				
+				let url = $("#url").val().trim();
+				if (!url) {
+					alert("주소를 입력하세요");
 					return;
 				}
-				$/ajax({
+				
+				// http도 아니고 https도 아니면 => alert
+				if (url.startsWith("http://") == false // url에서 처음으로 시작하는 값이 http:// 가 아니면 
+						&& url.startsWith("https://") == false) {
+					alert("주소 형식이 잘못되었습니다.");
+					return;
+				}
+				
+				console.log(name);
+				console.log(url);
+				
+				// AJAX 통신 => 서버 요청
+				$.ajax({
+					// request
 					type:"POST"
 					, url:"/lesson06/add-bookmark"
 					, data:{"name":name, "url":url}
-				
-				, success:function(data){
-					location.href = "/lesson06/bookmark-list-view"
-				}
-				,error:function(error){
-					alert(error);
-				}
+					
+					// response
+					// callback 함수
+					, success:function(data) { // data: JOSn String -> jquery ajax 함수가 parsing => js dictionary
+							// {"code":200, "result":"성공"}
+					
+						if (data.result == "성공") { // 성공에 관한 결과를 보고싶어, code로 보고싶어 .받고싶은 값
+							// 목록 화면으로 이동 - GET Method 요청
+							location.href = "/lesson06/bookmark-list-view";
+						}
+					
+					}
+					, error:function(xhr, status, error) {
+						alert("데이터를 추가하는데 실패했습니다.");
+					}
 				});
-			
-			});
-		});
+				
+			});//-- 추가버튼 이벤트 끝
+		}); //--ready 끝
 	</script>
 </body>
 </html>
