--- a/src/main/resources/templates/lesson06/bookmarkList.html
+++ b/src/main/resources/templates/lesson06/bookmarkList.html
@@ -12,7 +12,7 @@
 	<div class="container">
 		<h1>즐겨찾기 목록</h1>
 		
-		<table class="table text-center">
+		<table class="table text-center" ">
 			<thead>
 				<tr>
 					<th>No</th>
@@ -21,10 +21,12 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
-					<td>No</td>
-					<td>제목</td>
-					<td>주소</td>
+				<tr th:each="bookmark : ${bookmarkList}">
+					<td th:text="${bookmark.id}">No</td>
+					<td th:text="${bookmark.name}">제목</td>
+					<td>
+						<a th:href="${bookmark.url}" th:text="${bookmark.url}"></a>
+					</td>
 				</tr>
 			</tbody>
 		</table>
