--- a/src/main/resources/templates/lesson06/bookmarkList.html
+++ b/src/main/resources/templates/lesson06/bookmarkList.html
@@ -12,7 +12,7 @@
 	<div class="container">
 		<h1>즐겨찾기 목록</h1>
 		
-		<table class="table text-center" ">
+		<table class="table text-center">
 			<thead>
 				<tr>
 					<th>No</th>
