--- a/src/main/resources/templates/lesson06/addBookMark.html
+++ b/src/main/resources/templates/lesson06/addBookMark.html
@@ -17,18 +17,55 @@
 			<input type="text" id="name" class="form-control">
 		</div>
 
-		<label for="url">URL 주소</label>
-		<div class="form-group d-flex">
-			<input type="text" id="url" class="form-control col-10">
-			<button type="button" id="nameCheckBtn" class="btn btn-info ml-3 h-75">중복확인</button>
+		<div class="form-group">
+			<label for="url">URL 주소</label>
+			<div class="d-flex">
+				<input type="text" id="url" class="form-control col-11">
+				<button type="button" id="duplicationBtn" class="btn btn-info">중복확인</button>
+			</div>
+			
+			<small id="duplicationText" class="text-danger d-none">중복된 URL 입니다.</small>
+			<small id="availableText" class="text-success d-none">저장 가능한 URL 입니다.</small>
 		</div>
 		
 		<button type="button" id="addBtn" class="btn btn-success btn-block">추가</button>
 	</div>
 	
 	<script>
-		$(document).ready(function() { // 뿌려준다.document 
-		
+		$(document).ready(function() {
+			// 중복 확인
+			$("#duplicationBtn").on('click', function() {
+				//alert("중복");
+				let url = $("#url").val().trim();
+				if (!url) {
+					alert("주소를 입력하세요");
+					return;
+				}
+				
+				// AJAX - DB url 확인
+				$.ajax({
+					// request
+					type:"POST"
+					, url:"/lesson06/is-duplication-url"
+					, data:{"url":url}
+					
+					// response
+					, success:function(data) {
+						// {"code":200, "is_duplication":true} => 중복
+						if (data.is_duplication) { // 중복
+							$("#duplicationText").removeClass("d-none");
+							$("#availableText").addClass("d-none");
+						} else { // 중복 아님 => 사용 가능
+							$("#duplicationText").addClass("d-none");
+							$("#availableText").removeClass("d-none");
+						}
+					}
+					, error:function(error) {
+						alert("중복확인에 실패했습니다.");
+					}
+				});
+			});
+			
 			// 추가 버튼
 			$("#addBtn").on('click', function() {
 				//alert("버튼 클릭");
@@ -46,7 +83,7 @@
 				}
 				
 				// http도 아니고 https도 아니면 => alert
-				if (url.startsWith("http://") == false // url에서 처음으로 시작하는 값이 http:// 가 아니면 
+				if (url.startsWith("http://") == false
 						&& url.startsWith("https://") == false) {
 					alert("주소 형식이 잘못되었습니다.");
 					return;
@@ -64,15 +101,14 @@
 					
 					// response
 					// callback 함수
+					, success:function(data) { // data: JSON String -> jquery ajax 함수가 parsing => js dictionary
+						// {"code":200, "result":"성공"}
+						//alert(data.result);	
 					
-					, success:function(data) { // data: JOSn String -> jquery ajax 함수가 parsing => js dictionary
-							// {"code":200, "result":"성공"}
-					
-						if (data.result == "성공") { // 성공에 관한 결과를 보고싶어, code로 보고싶어 .받고싶은 값
+						if (data.result == "성공") {
 							// 목록 화면으로 이동 - GET Method 요청
 							location.href = "/lesson06/bookmark-list-view";
 						}
-					
 					}
 					, error:function(xhr, status, error) {
 						alert("데이터를 추가하는데 실패했습니다.");
@@ -80,19 +116,6 @@
 				});
 				
 			});//-- 추가버튼 이벤트 끝
-			
-			// 중복 알람뜨는 버튼
-		$("#nameCheckBtn").on('click', function(){
-			$("#nameStatusArea").empty();
-			
-			let url = $("#url").val.trim();
-			if (!url) {
-				$("#nameStatusArea").append(<span class="text-danger">중복된 url 입니다.</span>);
-				return;
-			}
-		})
-			
-			
 		}); //--ready 끝
 	</script>
 </body>
