booking ajax문 실행문 작성 해야함

--- a/src/main/resources/templates/booking/bookingList.html
+++ b/src/main/resources/templates/booking/bookingList.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" type="text/css" href="/css/booking/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/booking_style.css">
 </head>
 <body>
 	<div id="wrap" class="container">
@@ -38,14 +38,13 @@
 	                </tr>
 	            </thead>
 	            <tbody>
-	            	<tr>
-	            		<td></td>
-	            		<td></td>
-	            		<td></td>
-	            		<td></td>
-	            		<td></td>
-	            		<td></td>
-	            		<td></td>
+	            	<tr th:each="booking : ${bookingList}">
+	            		<td th:text="${booking.id}"></td>
+	            		<td th:text="${booking.name}"></td>
+	            		<td th:text="${booking.headcount}"></td>
+	            		<td th:text="${booking.date}"></td>
+	            		<td th:text="${booking.phoneNumber}"></td>
+	            		<td th:text="${booking.state}"></td>
 	            	</tr>
 	            </tbody>
 			</table>
