--- a/src/main/resources/templates/booking/makeBooking.html
+++ b/src/main/resources/templates/booking/makeBooking.html
@@ -40,7 +40,7 @@
 	                <input type="text" class="form-control" id="headcount">
 	
 	                <div class="subject-text my-2 font-weight-bold">전화번호</div>
-	                <input type="text" class="form-control" id="phoneNumber">
+	                <input type="text" class="for2m-control" id="phoneNumber">
 	
 	                <button type="button" id="makeBookingBtn" class="btn btn-warning w-100 mt-3">예약하기</button>
 	            </div>
