--- a/src/main/resources/templates/booking/makeBooking.html
+++ b/src/main/resources/templates/booking/makeBooking.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
     
-     <!-- datepicker -->
+    <!-- datepicker -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 	<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     
@@ -60,71 +60,69 @@
 	</div>
 	
 	<script>
-		$(document).ready(function(){
-			// datapicker 날짜 선택
+		$(document).ready(function() {
+			// datepicker 날짜 선택
 			$("#date").datepicker({
 				dateFormat:"yy-mm-dd"
 				, minDate:0
-			}); // datapikcer
+			});
 			
 			// 예약하기
-			$("#makeBookingBtn").on('click', function(){
-				//alert("예약하기")
+			$("#makeBookingBtn").on('click', function() {
+				//alert("예약");
 				let name = $("#name").val().trim();
 				let date = $("#date").val();
 				let day = $("#day").val().trim();
 				let headcount = $("#headcount").val().trim();
 				let phoneNumber = $("#phoneNumber").val().trim();
 				
-				if (!name){
+				if (!name) {
 					alert("이름을 입력하세요");
 					return;
-				} 
-				if (!date){
-					alert("날짜를 입력하세요");
+				}
+				if (!date) {
+					alert("날짜를 선택하세요");
 					return;
-				} 
-				if (!day){
+				}
+				if (!day) {
 					alert("숙박일을 입력하세요");
 					return;
-				} 
-				if (!headcount){
+				}
+				if (!headcount) {
 					alert("숙박인원을 입력하세요");
 					return;
-				} 
-				if (!phoneNumber){
-					alert("전화번호을 입력하세요");
+				}
+				if (!phoneNumber) {
+					alert("전화번호를 입력하세요.");
 					return;
-				} 
+				}
 				
 				console.log(name);
 				console.log(date);
-				console.log(day);;
+				console.log(day);
 				console.log(headcount);
 				console.log(phoneNumber);
 				
 				$.ajax({
 					// request
 					type:"post"
-					, url: "/booking/make-booking"
-					, date:{"name":name, "date":date , "day":day, "headcount":headcount, "phoneNumber":phoneNumber}
+					, url:"/booking/make-booking"
+					, data:{"name":name, "date":date, "day":day, "headcount":headcount, "phoneNumber":phoneNumber}
 					
-					
-					//response
-					, success : function(data){
-						// {"code":200, "result": "성공"}
+					// response
+					, success:function(data) {
+						// {"code":200, "result":"성공"}
 						if (data.result == "성공") {
-							alert("예약되셨습니다")
+							alert("예약되었습니다.");
 							// 목록으로 이동
-							location.href= "/booking/booking-list-view";
+							location.href = "/booking/booking-list-view";
 						}
 					}
-					
 					, error:function(error) {
-						alert("예약하는데 실패했습니다.")
+						alert("예약하는데 실패했습니다.");
 					}
-				}); // ajax
-			}); // on함수에 담긴예약하기
+				});
+			});
 		});
 	</script>
 </body>
